logs/api-error-0.log
2025-01-09 03:01:51 -05:00: Here's the report: 


 Error in routes/tokens.js :
YAMLSyntaxError: All collection items must start at the same column at line 20, column 19:

                - type: object
                  ^^^^^^^^^^^^…

YAMLSemanticError: Nested mappings are not allowed in compact mappings at line 20, column 25:

                - type: object
                        ^^^^^^…

YAMLSemanticError: Implicit map keys need to be on a single line at line 20, column 25:

                - type: object
                        ^^^^^^…
,Error in routes/tokens.js :
YAMLSyntaxError: All collection items must start at the same column at line 20, column 19:

                - type: object
                  ^^^^^^^^^^^^…

YAMLSemanticError: Nested mappings are not allowed in compact mappings at line 20, column 25:

                - type: object
                        ^^^^^^…

YAMLSemanticError: Implicit map keys need to be on a single line at line 20, column 25:

                - type: object
                        ^^^^^^…

